fix : assertions