@@ -4,6 +4,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -190,17 +191,17 @@ class UserSchemeDetailServiceImplTest {
         UserSchemeDetails nullScheme = new UserSchemeDetails();
         nullScheme.setId(7L);
         nullScheme.setRtaCode("JKL345");
-        nullScheme.setScheme(null);
+        nullScheme.setScheme("IS");
 
-        when(userSchemeDetailsRepository.findByAmfiIsNull()).thenReturn(Arrays.asList(nullScheme));
+        when(userSchemeDetailsRepository.findByAmfiIsNull()).thenReturn(List.of(nullScheme));
         when(mfSchemeService.fetchSchemesByRtaCode("JKL34")).thenReturn(Collections.emptyList());
 
         userSchemeDetailService.setUserSchemeAMFIIfNull();
 
         verify(userSchemeDetailsRepository).findByAmfiIsNull();
         verify(mfSchemeService).fetchSchemesByRtaCode("JKL34");
+        verify(mfSchemeService, times(1)).fetchSchemes("IS");
         verify(mfSchemeService, never()).findByPayOut(anyString());
-        verify(mfSchemeService, never()).fetchSchemes(anyString());
         verify(userSchemeDetailsRepository, never()).updateAmfiAndIsinById(anyLong(), anyString(), anyLong());
     }
 
